--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "keywords": [],
   "author": "gollowars",
+  "private": false,
   "license": "ISC",
   "dependencies": {
     "csv-write-stream": "^2.0.0",
@@ -15,5 +16,9 @@
     "fs-extra": "^2.1.2",
     "iconv-lite": "^0.4.15",
     "through2": "^2.0.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gollowars/csv-util"
+  },
 }
